--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,14 @@
 deploy/*
 work/*
-config
 postrun.sh
 SKIP
 SKIP_IMAGES
 .pc
 *-pc
 apt-cacher-ng/
+
+# we want these
+!config
+!stage3/SKIP
+!stage4/SKIP
+!stage5/SKIP
